--- a/Compatibility/ushanka.biologicalwarfare/Languages/English/DefInjected/HediffDef/MSS_Goo_Rename_Necroa_Hediffs.xml
+++ b/Compatibility/ushanka.biologicalwarfare/Languages/English/DefInjected/HediffDef/MSS_Goo_Rename_Necroa_Hediffs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-    <USH_Necroa.label>Unstable Grey Mechanites</USH_Necroa.label>
-    <USH_Necroa.description>An infection of unstable Grey Mechanites contracted from a Grey Corpse. As these mechanites have already performed their duties in breaking down a previous host for valuable organic matter they lack the stability and power of regular Grey Goo mechanites and are now only capable of turning the infected host into a Grey Corpse, rather than a drone, or a standard infection.</USH_Necroa.description>
+    <USH_Necroa.label>Grey Mechanites</USH_Necroa.label>
+    <USH_Necroa.description>An infection of Grey Mechanites contracted from Grey Goo or a Goo infected person. If not treated rapidly, under ideal conditions, the Goo will rapidly attack the brain causing excruciating pain and quickly killing the infected, at which point their remains will continue to be broken down as they wander as a lifeless goo puppet.</USH_Necroa.description>
 </LanguageData>
